# learning_practice

./: .gitignore  debug_usd.py  dqn_prac.py  fetch_files.py  get_body_names.py  get_joint_names_from_usd.py  get_root_body.py  how_to_run_tensorboard.txt  isaaclab_install_memo.md  num.py  read_memo.md  skrl_read_memo.md  test.py  torch_prac.py
booster_train/booster_train/: README.md
booster_train/booster_train/scripts/skrl/: play.py  start_play.bash  start_train.bash  train.py  try_error_memo.yaml
booster_train/booster_train/source/booster_train/: setup.py
humanoidprac/humanoidprac/: README.md
humanoidprac/humanoidprac/scripts/: list_envs.py  random_agent.py  zero_agent.py
humanoidprac/humanoidprac/scripts/nn_discriminator/: .gitignore  check_dataset.py  data.py  data_stats.py  debug_dataset.py  format.sh  joint_model.py  memo.md  model.py  nn_data.py  param.md  play.py  preprocess_data.py  setting.py  tensor.sh  test.py  train.py
humanoidprac/humanoidprac/scripts/skrl/: .gitignore  TODO.md  command_builder.py  command_generator.py  generate_config_list.py  graph_viewer.py  health_train.sh  logger.py  play.py  play_hydra.py  pyproject.toml  random_train.sh  run_play.sh  task_runner.py  task_runner_config.yaml  train.py
humanoidprac/humanoidprac/source/humanoidprac/: setup.py
isaac-project/: install_isaaclab.sh  main.py  pyproject.toml  run_sim.sh
kick_env/kick_env/: README.md
kick_env/kick_env/scripts/: list_envs.py
kick_env/kick_env/scripts/skrl/: play.py  start_play.sh  start_train.sh  train.py
utils/: kernel_plot.py
(+566 files in other folders)
