[project]
name = "isaac-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
	"torch==2.7.0+cu128; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "isaacsim[all,extscache]==4.5.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "isaacsim"
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
    { index = "torch-cpu", marker = "sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')"},
]
isaacsim = [
    { index = "isaacsim", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"}
]